--- a/index.html
+++ b/index.html
@@ -28,61 +28,27 @@
             let teamNamen = ["Team 1", "Team 2", "Team 3", "Team 4"];
             let intervals = [null, null, null, null];
             let geselecteerdeTimer = 0;
-            let zichtbareTimers = [true, true, true, true];
+            let zichtbareTimers = [true, true, true, true];  // Initieer zichtbaarheid
 
-            // Functie om te verbergen als nodig
-            function hideIfNeeded() {
-                const params = new URLSearchParams(window.location.search);
-                const view = params.get('view');
-
-                // Check of de view parameter 'display' is
-                if (view === 'display') {
-                    // Verberg knoppen voor de "display" pagina
-                    const elementsToHide = document.querySelectorAll('.hide-if-needed');
-                    elementsToHide.forEach(el => {
-                        el.style.display = 'none';
-                    });
-
-                    // Zet de knoppen en teamnamen op 'disabled' zodat ze niet interactief zijn
-                    document.querySelectorAll(".timer").forEach((el) => {
-                        el.style.pointerEvents = "none"; // Timers niet selecteerbaar
-                    });
-
-                    document.querySelectorAll(".team-name").forEach((el) => {
-                        el.style.pointerEvents = "none"; // Teamnamen niet wijzigbaar
-                    });
-
-                    const teamInputElements = document.querySelectorAll(".team-input");
-                    teamInputElements.forEach((el) => {
-                        el.setAttribute("disabled", "true"); // Zet inputvelden voor teamnamen uit
-                    });
-
-                } else {
-                    // Als de 'view' parameter niet 'display' is, laat de elementen zien
-                    const elementsToShow = document.querySelectorAll('.hide-if-needed');
-                    elementsToShow.forEach(el => {
-                        el.style.display = 'block';
-                    });
-
-                    // Zet alles weer actief in de andere modus
-                    document.querySelectorAll(".timer").forEach((el) => {
-                        el.style.pointerEvents = "auto";
-                    });
-
-                    document.querySelectorAll(".team-name").forEach((el) => {
-                        el.style.pointerEvents = "auto";
-                    });
-
-                    const teamInputElements = document.querySelectorAll(".team-input");
-                    teamInputElements.forEach((el) => {
-                        el.removeAttribute("disabled"); // Zet de teamnaam inputvelden weer aan
-                    });
-                }
+            // Functie om de zichtbaarheid in de database te updaten
+            function updateVisibilityStatus() {
+                const visibilityRef = firebase.database().ref('visibilityStatus');
+                visibilityRef.set(zichtbareTimers);  // Update de zichtbaarheid van de timers in Firebase
             }
 
-            // Roep de hideIfNeeded functie aan bij het laden van de pagina
-            hideIfNeeded();
+            // Synchroniseer zichtbaarheid van de timers met Firebase
+            function syncVisibility() {
+                const visibilityRef = firebase.database().ref('visibilityStatus');
+                visibilityRef.on('value', (snapshot) => {
+                    const data = snapshot.val();
+                    if (data) {
+                        zichtbareTimers = data;  // Ontvang de zichtbaarheid van Firebase
+                        updateWeergave();  // Werk de zichtbaarheid bij in de UI
+                    }
+                });
+            }
 
+            // Update de weergave van de timers
             function updateWeergave() {
                 timers.forEach((tijd, index) => {
                     const timerElement = document.getElementById(`timer${index}`);
@@ -110,17 +76,15 @@
                 });
             }
 
+            // Selecteer een timer
             function selecteerTimer(index) {
                 document.querySelectorAll(".timer").forEach(el => el.classList.remove("selected"));
                 geselecteerdeTimer = index;
                 document.getElementById(`timer-container-${index}`).classList.add("selected");
                 document.getElementById("timerSelect").value = index;
-
-                // Bewaar de geselecteerde timer in Firebase voor synchronisatie
-                const selectedTimerRef = firebase.database().ref('selectedTimer');
-                selectedTimerRef.set(index);
             }
 
+            // Start de timer
             function startTimer() {
                 if (intervals[geselecteerdeTimer]) return;
                 intervals[geselecteerdeTimer] = setInterval(() => {
@@ -132,28 +96,34 @@
                 }, 1000);
             }
 
+            // Stop de timer
             function stopTimer() {
                 clearInterval(intervals[geselecteerdeTimer]);
                 intervals[geselecteerdeTimer] = null;
             }
 
+            // Reset de timer
             function resetTimer() {
                 timers = [60, 60, 60, 60];
                 updateWeergave();
                 updateDatabase(); // Zet de timers weer op 60 in Firebase
             }
 
+            // Pas de tijd aan
             function pasTijdAan(aantal) {
                 timers[geselecteerdeTimer] = Math.max(0, timers[geselecteerdeTimer] + aantal);
                 updateWeergave();
                 updateDatabase(); // Stuur de wijziging naar Firebase
             }
 
+            // Verberg de timer
             function toggleTimerZichtbaarheid() {
                 zichtbareTimers[geselecteerdeTimer] = !zichtbareTimers[geselecteerdeTimer];
                 updateWeergave();
+                updateVisibilityStatus();  // Update de zichtbaarheid in de database
             }
 
+            // Stel de tijd in
             function stelAangepasteTijdIn() {
                 const invoerSeconden = parseInt(document.getElementById("timeInput").value);
                 if (!isNaN(invoerSeconden) && invoerSeconden >= 0) {
@@ -165,6 +135,7 @@
                 }
             }
 
+            // Maak de teamnaam bewerkbaar
             function maakTeamnaamBewerkbaar(index) {
                 let naamLabel = document.getElementById(`team-name-${index}`);
                 
@@ -187,6 +158,7 @@
                 }
             }
 
+            // Sla de nieuwe teamnaam op
             function slaNieuweTeamnaamOp(index, nieuweNaam) {
                 if (nieuweNaam.trim() !== "") {
                     teamNamen[index] = nieuweNaam;
@@ -195,6 +167,7 @@
                 updateDatabase(); // Stuur de nieuwe teamnaam naar Firebase
             }
 
+            // Update de database met timers
             function updateDatabase() {
                 const timersRef = firebase.database().ref('timers');
                 timersRef.set({
@@ -203,16 +176,9 @@
                     team3: timers[2],
                     team4: timers[3]
                 });
-
-                const teamNamesRef = firebase.database().ref('teamNames');
-                teamNamesRef.set({
-                    team1: teamNamen[0],
-                    team2: teamNamen[1],
-                    team3: teamNamen[2],
-                    team4: teamNamen[3]
-                });
             }
 
+            // Sync de timers met de database
             function syncTimers() {
                 const timersRef = firebase.database().ref('timers');
                 timersRef.on('value', (snapshot) => {
@@ -222,25 +188,21 @@
                         updateWeergave();
                     }
                 });
+            }
 
-                const teamNamesRef = firebase.database().ref('teamNames');
-                teamNamesRef.on('value', (snapshot) => {
+            // Sync de zichtbaarheid van de timers
+            function syncVisibility() {
+                const visibilityRef = firebase.database().ref('visibilityStatus');
+                visibilityRef.on('value', (snapshot) => {
                     const data = snapshot.val();
                     if (data) {
-                        teamNamen = [data.team1, data.team2, data.team3, data.team4];
+                        zichtbareTimers = data;
                         updateWeergave();
-                    }
-                });
-
-                const selectedTimerRef = firebase.database().ref('selectedTimer');
-                selectedTimerRef.on('value', (snapshot) => {
-                    const selectedTimer = snapshot.val();
-                    if (selectedTimer !== null) {
-                        selecteerTimer(selectedTimer);
                     }
                 });
             }
 
+            // Initialiseer de database met standaardwaarden
             function checkAndInitializeDatabase() {
                 const timersRef = firebase.database().ref('timers');
                 timersRef.once('value', (snapshot) => {
@@ -254,30 +216,20 @@
                     }
                 });
 
-                const teamNamesRef = firebase.database().ref('teamNames');
-                teamNamesRef.once('value', (snapshot) => {
+                const visibilityRef = firebase.database().ref('visibilityStatus');
+                visibilityRef.once('value', (snapshot) => {
                     if (!snapshot.exists()) {
-                        teamNamesRef.set({
-                            team1: "Team 1",
-                            team2: "Team 2",
-                            team3: "Team 3",
-                            team4: "Team 4"
-                        });
-                    }
-                });
-
-                const selectedTimerRef = firebase.database().ref('selectedTimer');
-                selectedTimerRef.once('value', (snapshot) => {
-                    if (!snapshot.exists()) {
-                        selectedTimerRef.set(0);  // Start met timer 0 geselecteerd
+                        visibilityRef.set([true, true, true, true]);
                     }
                 });
             }
 
+            // Roep functies aan
             checkAndInitializeDatabase();
             syncTimers();
+            syncVisibility();
 
-            // Event listeners voor timer en knoppen
+            // Event listeners voor knoppen
             document.querySelectorAll(".timer").forEach((el, index) => {
                 el.addEventListener("click", () => selecteerTimer(index));
             });
@@ -314,32 +266,32 @@
             justify-content: center;
             gap: 20px;
             margin-bottom: 20px;
-            flex-wrap: nowrap;
-            overflow-x: auto;
+            flex-wrap: nowrap; /* Zorg ervoor dat de timers naast elkaar blijven */
+            overflow-x: auto; /* Zorg ervoor dat je kunt scrollen als er niet genoeg ruimte is */
         }
         .timer {
-            width: 300px;
-            height: 300px;
+            width: 300px;  /* Vergrote breedte voor timers */
+            height: 300px;  /* Vergrote hoogte voor timers */
             border: 6px solid white;
             display: flex;
             flex-direction: column;
             justify-content: center;
             align-items: center;
-            font-size: 70px;
+            font-size: 70px; /* Vergrote tekstgrootte voor timers */
             font-weight: bold;
             color: red;
             background-color: white;
             border-radius: 20px;
         }
         .team-name {
-            font-size: 30px;
+            font-size: 30px;  /* Verander de font size van de teamnaam naar 30px */
             font-weight: bold;
             color: black;
             cursor: pointer;
             margin-bottom: 20px;
         }
         .team-input {
-            font-size: 30px;
+            font-size: 30px;  /* Teamnaam blijft op dezelfde grootte van 30px */
             font-weight: bold;
             width: 80%;
             text-align: center;
@@ -366,16 +318,17 @@
             padding: 10px;
             font-size: 14px;
             border-radius: 5px;
-            width: auto;
-            max-width: 120px;
+            width: auto; /* Laat de knoppen kleiner worden, maar passen goed in de layout */
+            max-width: 120px; /* Beperk de breedte van de knoppen */
         }
         .selected {
             border: 6px solid red;
         }
 
+        /* Media query voor kleinere schermen (mobiel) */
         @media (max-width: 768px) {
             .timer-container {
-                flex-direction: row;
+                flex-direction: row; /* Zorg ervoor dat de timers naast elkaar blijven op kleinere schermen */
             }
             .timer {
                 width: 230px;
@@ -415,6 +368,7 @@
         </div>
     </div>
 
+    <!-- Control Buttons -->
     <div class="controls">
         <div class="row">
             <button id="startBtn" class="hide-if-needed">Start</button>
