--- a/index.html
+++ b/index.html
@@ -28,22 +28,22 @@
             let teamNamen = ["Team 1", "Team 2", "Team 3", "Team 4"];
             let intervals = [null, null, null, null];
             let geselecteerdeTimer = 0;
-            let zichtbareTimers = [true, true, true, true];  // Initieer zichtbaarheid
+            let zichtbareTimers = [true, true, true, true];
 
-            // Functie om de zichtbaarheid in de database te updaten
+            // Functie om zichtbaarheid in de database bij te werken
             function updateVisibilityStatus() {
                 const visibilityRef = firebase.database().ref('visibilityStatus');
-                visibilityRef.set(zichtbareTimers);  // Update de zichtbaarheid van de timers in Firebase
+                visibilityRef.set(zichtbareTimers);  // Update zichtbaarheid van timers in Firebase
             }
 
-            // Synchroniseer zichtbaarheid van de timers met Firebase
+            // Synchroniseer zichtbaarheid van timers met Firebase
             function syncVisibility() {
                 const visibilityRef = firebase.database().ref('visibilityStatus');
                 visibilityRef.on('value', (snapshot) => {
                     const data = snapshot.val();
                     if (data) {
-                        zichtbareTimers = data;  // Ontvang de zichtbaarheid van Firebase
-                        updateWeergave();  // Werk de zichtbaarheid bij in de UI
+                        zichtbareTimers = data;
+                        updateWeergave();
                     }
                 });
             }
@@ -82,9 +82,12 @@
                 geselecteerdeTimer = index;
                 document.getElementById(`timer-container-${index}`).classList.add("selected");
                 document.getElementById("timerSelect").value = index;
+
+                // Bewaar de geselecteerde timer in Firebase voor synchronisatie
+                const selectedTimerRef = firebase.database().ref('selectedTimer');
+                selectedTimerRef.set(index);
             }
 
-            // Start de timer
             function startTimer() {
                 if (intervals[geselecteerdeTimer]) return;
                 intervals[geselecteerdeTimer] = setInterval(() => {
@@ -96,34 +99,29 @@
                 }, 1000);
             }
 
-            // Stop de timer
             function stopTimer() {
                 clearInterval(intervals[geselecteerdeTimer]);
                 intervals[geselecteerdeTimer] = null;
             }
 
-            // Reset de timer
             function resetTimer() {
                 timers = [60, 60, 60, 60];
                 updateWeergave();
                 updateDatabase(); // Zet de timers weer op 60 in Firebase
             }
 
-            // Pas de tijd aan
             function pasTijdAan(aantal) {
                 timers[geselecteerdeTimer] = Math.max(0, timers[geselecteerdeTimer] + aantal);
                 updateWeergave();
                 updateDatabase(); // Stuur de wijziging naar Firebase
             }
 
-            // Verberg de timer
             function toggleTimerZichtbaarheid() {
                 zichtbareTimers[geselecteerdeTimer] = !zichtbareTimers[geselecteerdeTimer];
                 updateWeergave();
-                updateVisibilityStatus();  // Update de zichtbaarheid in de database
+                updateVisibilityStatus();  // Update zichtbaarheid in de database
             }
 
-            // Stel de tijd in
             function stelAangepasteTijdIn() {
                 const invoerSeconden = parseInt(document.getElementById("timeInput").value);
                 if (!isNaN(invoerSeconden) && invoerSeconden >= 0) {
@@ -135,7 +133,6 @@
                 }
             }
 
-            // Maak de teamnaam bewerkbaar
             function maakTeamnaamBewerkbaar(index) {
                 let naamLabel = document.getElementById(`team-name-${index}`);
                 
@@ -158,7 +155,6 @@
                 }
             }
 
-            // Sla de nieuwe teamnaam op
             function slaNieuweTeamnaamOp(index, nieuweNaam) {
                 if (nieuweNaam.trim() !== "") {
                     teamNamen[index] = nieuweNaam;
@@ -167,7 +163,6 @@
                 updateDatabase(); // Stuur de nieuwe teamnaam naar Firebase
             }
 
-            // Update de database met timers
             function updateDatabase() {
                 const timersRef = firebase.database().ref('timers');
                 timersRef.set({
@@ -176,9 +171,16 @@
                     team3: timers[2],
                     team4: timers[3]
                 });
+
+                const teamNamesRef = firebase.database().ref('teamNames');
+                teamNamesRef.set({
+                    team1: teamNamen[0],
+                    team2: teamNamen[1],
+                    team3: teamNamen[2],
+                    team4: teamNamen[3]
+                });
             }
 
-            // Sync de timers met de database
             function syncTimers() {
                 const timersRef = firebase.database().ref('timers');
                 timersRef.on('value', (snapshot) => {
@@ -188,21 +190,34 @@
                         updateWeergave();
                     }
                 });
-            }
 
-            // Sync de zichtbaarheid van de timers
-            function syncVisibility() {
-                const visibilityRef = firebase.database().ref('visibilityStatus');
-                visibilityRef.on('value', (snapshot) => {
+                const teamNamesRef = firebase.database().ref('teamNames');
+                teamNamesRef.on('value', (snapshot) => {
                     const data = snapshot.val();
                     if (data) {
-                        zichtbareTimers = data;
+                        teamNamen = [data.team1, data.team2, data.team3, data.team4];
+                        updateWeergave();
+                    }
+                });
+
+                const selectedTimerRef = firebase.database().ref('selectedTimer');
+                selectedTimerRef.on('value', (snapshot) => {
+                    const selectedTimer = snapshot.val();
+                    if (selectedTimer !== null) {
+                        selecteerTimer(selectedTimer);
+                    }
+                });
+
+                const visibilityRef = firebase.database().ref('visibilityStatus');
+                visibilityRef.on('value', (snapshot) => {
+                    const visibilityData = snapshot.val();
+                    if (visibilityData) {
+                        zichtbareTimers = visibilityData;
                         updateWeergave();
                     }
                 });
             }
 
-            // Initialiseer de database met standaardwaarden
             function checkAndInitializeDatabase() {
                 const timersRef = firebase.database().ref('timers');
                 timersRef.once('value', (snapshot) => {
@@ -216,20 +231,37 @@
                     }
                 });
 
+                const teamNamesRef = firebase.database().ref('teamNames');
+                teamNamesRef.once('value', (snapshot) => {
+                    if (!snapshot.exists()) {
+                        teamNamesRef.set({
+                            team1: "Team 1",
+                            team2: "Team 2",
+                            team3: "Team 3",
+                            team4: "Team 4"
+                        });
+                    }
+                });
+
+                const selectedTimerRef = firebase.database().ref('selectedTimer');
+                selectedTimerRef.once('value', (snapshot) => {
+                    if (!snapshot.exists()) {
+                        selectedTimerRef.set(0);  // Start met timer 0 geselecteerd
+                    }
+                });
+
                 const visibilityRef = firebase.database().ref('visibilityStatus');
                 visibilityRef.once('value', (snapshot) => {
                     if (!snapshot.exists()) {
-                        visibilityRef.set([true, true, true, true]);
+                        visibilityRef.set([true, true, true, true]);  // Start met alles zichtbaar
                     }
                 });
             }
 
-            // Roep functies aan
             checkAndInitializeDatabase();
             syncTimers();
-            syncVisibility();
 
-            // Event listeners voor knoppen
+            // Event listeners voor timer en knoppen
             document.querySelectorAll(".timer").forEach((el, index) => {
                 el.addEventListener("click", () => selecteerTimer(index));
             });
@@ -252,100 +284,6 @@
             updateWeergave();
         });
     </script>
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            text-align: center;
-            background-color: #f5f5f5;
-        }
-        h1 {
-            font-size: 80px;
-        }
-        .timer-container {
-            display: flex;
-            justify-content: center;
-            gap: 20px;
-            margin-bottom: 20px;
-            flex-wrap: nowrap; /* Zorg ervoor dat de timers naast elkaar blijven */
-            overflow-x: auto; /* Zorg ervoor dat je kunt scrollen als er niet genoeg ruimte is */
-        }
-        .timer {
-            width: 300px;  /* Vergrote breedte voor timers */
-            height: 300px;  /* Vergrote hoogte voor timers */
-            border: 6px solid white;
-            display: flex;
-            flex-direction: column;
-            justify-content: center;
-            align-items: center;
-            font-size: 70px; /* Vergrote tekstgrootte voor timers */
-            font-weight: bold;
-            color: red;
-            background-color: white;
-            border-radius: 20px;
-        }
-        .team-name {
-            font-size: 30px;  /* Verander de font size van de teamnaam naar 30px */
-            font-weight: bold;
-            color: black;
-            cursor: pointer;
-            margin-bottom: 20px;
-        }
-        .team-input {
-            font-size: 30px;  /* Teamnaam blijft op dezelfde grootte van 30px */
-            font-weight: bold;
-            width: 80%;
-            text-align: center;
-            border: none;
-            outline: none;
-        }
-        .controls {
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-            gap: 10px;
-            margin-top: 60px;
-        }
-        .row {
-            display: flex;
-            justify-content: center;
-            gap: 10px;
-            flex-wrap: wrap;
-        }
-        button {
-            background-color: red;
-            color: white;
-            border: none;
-            padding: 10px;
-            font-size: 14px;
-            border-radius: 5px;
-            width: auto; /* Laat de knoppen kleiner worden, maar passen goed in de layout */
-            max-width: 120px; /* Beperk de breedte van de knoppen */
-        }
-        .selected {
-            border: 6px solid red;
-        }
-
-        /* Media query voor kleinere schermen (mobiel) */
-        @media (max-width: 768px) {
-            .timer-container {
-                flex-direction: row; /* Zorg ervoor dat de timers naast elkaar blijven op kleinere schermen */
-            }
-            .timer {
-                width: 230px;
-                height: 230px;
-                font-size: 50px;
-            }
-            .team-name {
-                font-size: 18px;
-            }
-            .controls {
-                width: 90%;
-            }
-            button {
-                font-size: 12px;
-            }
-        }
-    </style>
 </head>
 <body>
     <h1>De Slimste Kameraad</h1>
