--- a/index.html
+++ b/index.html
@@ -30,25 +30,30 @@
             let geselecteerdeTimer = 0;
             let zichtbareTimers = [true, true, true, true];
 
-            // Functie om zichtbaarheid in de database bij te werken
-            function updateVisibilityStatus() {
-                const visibilityRef = firebase.database().ref('visibilityStatus');
-                visibilityRef.set(zichtbareTimers);  // Update zichtbaarheid van timers in Firebase
+            // Functie om te verbergen als nodig
+            function hideIfNeeded() {
+                const params = new URLSearchParams(window.location.search);
+                const view = params.get('view');
+
+                // Check of de view parameter 'display' is
+                if (view === 'display') {
+                    // Verberg knoppen voor de "display" pagina
+                    const elementsToHide = document.querySelectorAll('.hide-if-needed');
+                    elementsToHide.forEach(el => {
+                        el.style.display = 'none';
+                    });
+                } else {
+                    // Als de 'view' parameter niet 'display' is, laat de elementen zien
+                    const elementsToShow = document.querySelectorAll('.hide-if-needed');
+                    elementsToShow.forEach(el => {
+                        el.style.display = 'block';
+                    });
+                }
             }
 
-            // Synchroniseer zichtbaarheid van timers met Firebase
-            function syncVisibility() {
-                const visibilityRef = firebase.database().ref('visibilityStatus');
-                visibilityRef.on('value', (snapshot) => {
-                    const data = snapshot.val();
-                    if (data) {
-                        zichtbareTimers = data;
-                        updateWeergave();
-                    }
-                });
-            }
+            // Roep de hideIfNeeded functie aan bij het laden van de pagina
+            hideIfNeeded();
 
-            // Update de weergave van de timers
             function updateWeergave() {
                 timers.forEach((tijd, index) => {
                     const timerElement = document.getElementById(`timer${index}`);
@@ -76,7 +81,6 @@
                 });
             }
 
-            // Selecteer een timer
             function selecteerTimer(index) {
                 document.querySelectorAll(".timer").forEach(el => el.classList.remove("selected"));
                 geselecteerdeTimer = index;
@@ -119,7 +123,6 @@
             function toggleTimerZichtbaarheid() {
                 zichtbareTimers[geselecteerdeTimer] = !zichtbareTimers[geselecteerdeTimer];
                 updateWeergave();
-                updateVisibilityStatus();  // Update zichtbaarheid in de database
             }
 
             function stelAangepasteTijdIn() {
@@ -207,15 +210,6 @@
                         selecteerTimer(selectedTimer);
                     }
                 });
-
-                const visibilityRef = firebase.database().ref('visibilityStatus');
-                visibilityRef.on('value', (snapshot) => {
-                    const visibilityData = snapshot.val();
-                    if (visibilityData) {
-                        zichtbareTimers = visibilityData;
-                        updateWeergave();
-                    }
-                });
             }
 
             function checkAndInitializeDatabase() {
@@ -249,13 +243,6 @@
                         selectedTimerRef.set(0);  // Start met timer 0 geselecteerd
                     }
                 });
-
-                const visibilityRef = firebase.database().ref('visibilityStatus');
-                visibilityRef.once('value', (snapshot) => {
-                    if (!snapshot.exists()) {
-                        visibilityRef.set([true, true, true, true]);  // Start met alles zichtbaar
-                    }
-                });
             }
 
             checkAndInitializeDatabase();
@@ -284,6 +271,99 @@
             updateWeergave();
         });
     </script>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            text-align: center;
+            background-color: #f5f5f5;
+        }
+        h1 {
+            font-size: 80px;
+        }
+        .timer-container {
+            display: flex;
+            justify-content: center;
+            gap: 20px;
+            margin-bottom: 20px;
+            flex-wrap: nowrap;
+            overflow-x: auto;
+        }
+        .timer {
+            width: 300px;
+            height: 300px;
+            border: 6px solid white;
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            align-items: center;
+            font-size: 70px;
+            font-weight: bold;
+            color: red;
+            background-color: white;
+            border-radius: 20px;
+        }
+        .team-name {
+            font-size: 30px;
+            font-weight: bold;
+            color: black;
+            cursor: pointer;
+            margin-bottom: 20px;
+        }
+        .team-input {
+            font-size: 30px;
+            font-weight: bold;
+            width: 80%;
+            text-align: center;
+            border: none;
+            outline: none;
+        }
+        .controls {
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            gap: 10px;
+            margin-top: 60px;
+        }
+        .row {
+            display: flex;
+            justify-content: center;
+            gap: 10px;
+            flex-wrap: wrap;
+        }
+        button {
+            background-color: red;
+            color: white;
+            border: none;
+            padding: 10px;
+            font-size: 14px;
+            border-radius: 5px;
+            width: auto;
+            max-width: 120px;
+        }
+        .selected {
+            border: 6px solid red;
+        }
+
+        @media (max-width: 768px) {
+            .timer-container {
+                flex-direction: row;
+            }
+            .timer {
+                width: 230px;
+                height: 230px;
+                font-size: 50px;
+            }
+            .team-name {
+                font-size: 18px;
+            }
+            .controls {
+                width: 90%;
+            }
+            button {
+                font-size: 12px;
+            }
+        }
+    </style>
 </head>
 <body>
     <h1>De Slimste Kameraad</h1>
