--- a/index.html
+++ b/index.html
@@ -330,6 +330,7 @@
             color: red;
             background-color: white;
             border-radius: 20px;
+            text-align: center;
         }
         .team-name {
             font-size: 30px;
@@ -350,6 +351,7 @@
         @media (max-width: 768px) {
             .team-input {
                 font-size: 24px;
+                padding: 10px;
             }
         }
         .controls {
