--- a/index.html
+++ b/index.html
@@ -360,7 +360,10 @@
             outline: none;
             box-sizing: border-box;
         }
-
+        /* Verplaats de seconden naar beneden door een margin-top toe te voegen */
+        .timer div[id^="timer"] {
+            margin-top: 30px; /* Pas dit aan om de seconden verder naar beneden te verplaatsen */
+    }
         /* Media query voor mobiele schermen */
         @media (max-width: 768px) {
             .timer {
